<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_pay"
        android:icon="@drawable/ic_payment_black_24dp"
        android:title="@string/title_pay" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_history"/>

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications"
        android:title="@string/title_notifi" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/title_profile" />

</menu>